--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,26 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  height: 100vh;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+}
+button {
+  border-radius: 10px;
   color: white;
+  padding: 10px;
+  margin: 2px;
 }
-
-.App-link {
-  color: #61dafb;
+button:nth-of-type(1) {
+  background-color: red;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:nth-of-type(2) {
+  background-color: green;
+}
+button:nth-of-type(3) {
+  display: block;
+  margin: 10px auto;
+  background-color: rebeccapurple;
 }
